[project]
name = "imgs2xxx"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nomura", email = "moosan6363@gmail.com" }
]
dependencies = [
    "pillow>=10.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/imgs2xxx"]
